feat: named jdbc template