@@ -2,13 +2,14 @@ package hello.itemservice.repository.memory;
 
 import hello.itemservice.domain.Item;
 import hello.itemservice.repository.ItemRepository;
-import hello.itemservice.repository.ItemSearchCond;
+import hello.itemservice.repository.ItemSearchCondition;
 import hello.itemservice.repository.ItemUpdateDto;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import org.springframework.stereotype.Repository;
 import org.springframework.util.ObjectUtils;
-
-import java.util.*;
-import java.util.stream.Collectors;
 
 @Repository
 public class MemoryItemRepository implements ItemRepository {
@@ -26,9 +27,9 @@ public class MemoryItemRepository implements ItemRepository {
     @Override
     public void update(Long itemId, ItemUpdateDto updateParam) {
         Item findItem = findById(itemId).orElseThrow();
-        findItem.setItemName(updateParam.getItemName());
-        findItem.setPrice(updateParam.getPrice());
-        findItem.setQuantity(updateParam.getQuantity());
+        findItem.setItemName(updateParam.itemName());
+        findItem.setPrice(updateParam.price());
+        findItem.setQuantity(updateParam.quantity());
     }
 
     @Override
@@ -37,22 +38,22 @@ public class MemoryItemRepository implements ItemRepository {
     }
 
     @Override
-    public List<Item> findAll(ItemSearchCond cond) {
-        String itemName = cond.getItemName();
-        Integer maxPrice = cond.getMaxPrice();
+    public List<Item> findAll(ItemSearchCondition condition) {
+        String itemName = condition.itemName();
+        Integer maxPrice = condition.maxPrice();
         return store.values().stream()
                 .filter(item -> {
                     if (ObjectUtils.isEmpty(itemName)) {
                         return true;
                     }
-                    return item.getItemName().contains(itemName);
+                    return item.getItemName()
+                            .contains(itemName);
                 }).filter(item -> {
-                    if (maxPrice == null) {
+                    if (ObjectUtils.isEmpty(maxPrice)) {
                         return true;
                     }
                     return item.getPrice() <= maxPrice;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     public void clearStore() {
